# axum-web-server

./: Cargo.toml
db/: add_users.sql  create_users_table.sql
src/: main.rs
